created a new model

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">22ByteTest</string>
+    <string name="api_key">3bb71e0155f74c689223311ea2b68c50</string>
 </resources>
